[metadata]
name = domainrecon
version = 0.2.0
description = CLI-verktyg för att kartlägga teknikstack för domäner
author = Ditt Namn
license = MIT

[options]
packages = find:
install_requires =
    rich
    python-whois
    dnspython
    ipwhois
    aiohttp
    bs4

[options.entry_points]
console_scripts =
    domainrecon = domainrecon.cli:main